--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,8 @@
 [package]
-
 name = "hashids"
 version = "1.0.0"
-authors = [ "charsyam <charsyam@gmail.com>" ]
-description = "HashIds Rust Implementation"
-repository = "https://github.com/charsyam/hashids_rust"
-keywords = ["rust", "hashids"]
+authors = [ "charsyam <charsyam@gmail.com>", "andixlm <andixev@gmail.com>" ]
+edition = "2021"
 license = "MIT"
 
 include = [
@@ -15,4 +12,4 @@ include = [
 
 [dependencies]
 failure = "0.1"
-regex = "0.1"
+regex = "1.5"
